Added first fragment with spinner download

--- a/MohammadAliModule10/src/main/res/menu/bottom_nav_menu.xml
+++ b/MohammadAliModule10/src/main/res/menu/bottom_nav_menu.xml
@@ -3,18 +3,18 @@
     <item
         android:id="@+id/Mo1e"
         android:title="@string/moe"
-        android:icon="@drawable/mo1e_foreground"
+        android:icon="@drawable/mo1e"
         android:orderInCategory="1"/>
     <item
         android:id="@+id/Fou1adi"
         android:title="@string/fouladi"
         android:icon="@drawable/fouladi"
         android:orderInCategory="2"/>
-    <item
+   <!-- <item
         android:id="@+id/N015437173"
         android:title="@string/n01547173"
         android:icon="@drawable/n01547173"
         android:orderInCategory="3"/>
-
+-->
 </menu>
     <!--MohammadAliFouldi N01547173-->
