--- a/MohammadAliModule10/src/main/res/layout/activity_main.xml
+++ b/MohammadAliModule10/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginBottom="4dp"
+        android:theme="@style/Theme.MyTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
