--- a/MohammadAliModule10/src/main/res/values/colors.xml
+++ b/MohammadAliModule10/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="rose">#FF9FAA</color>
     <color name="light_blue">#00F0FF</color>
     <color name="light_pink">#FF99FF</color>
+    <color name="light_purple">#ffddff</color>
     <color name="blue">#0000FF</color>
     <color name="colorPrimary">#BB86FC</color>
     <color name="colorPrimaryVariant">#3700B3</color>
