--- a/MohammadAliModule10/src/main/res/values/themes.xml
+++ b/MohammadAliModule10/src/main/res/values/themes.xml
@@ -6,4 +6,17 @@
     </style>
 
     <style name="Theme.MohammadAliLab10" parent="Base.Theme.MohammadAliLab10" />
+    <style name="Theme.MyTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/lavender</item>
+        <item name="colorPrimaryVariant">@color/lavender</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    </style>
+    <style name="Theme.MohammadAliLab8" parent="Base.Theme.MohammadAliLab10" />
 </resources>
