--- a/MohammadAliModule10/src/main/res/layout/activity_main.xml
+++ b/MohammadAliModule10/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FouladiActivity10">
+    <!-- MohammadAli Fouladi N01547173-->
 
     <FrameLayout
         android:id="@+id/MoeflFragment"
@@ -19,8 +20,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/MoebottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_width="403dp"
+        android:layout_height="113dp"
         android:layout_marginBottom="4dp"
         android:theme="@style/Theme.MyTheme"
         app:layout_constraintBottom_toBottomOf="parent"
