--- a/MohammadAliModule10/src/main/res/values/colors.xml
+++ b/MohammadAliModule10/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="colorSecondaryVariant">#03DAC6</color>
     <color name="colorOnSecondary">#000000</color>
     <color name="dark_background">#220055</color>
+    <color name="light_background">#ffebcd</color>
 
 </resources>
     <!-- MohammadAli Fouladi N01547173-->
