--- a/MohammadAliModule10/src/main/res/layout/activity_main.xml
+++ b/MohammadAliModule10/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
 
     <FrameLayout
         android:id="@+id/MoeflFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="409dp"
+        android:layout_height="616dp"
         app:layout_constraintBottom_toTopOf="@+id/MoebottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/MoebottomNavigationView"
