--- a/MohammadAliModule10/src/main/res/layout/fragment_m4f.xml
+++ b/MohammadAliModule10/src/main/res/layout/fragment_m4f.xml
@@ -1,51 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@android:color/darker_gray">
-
-    <TextClock
-        android:id="@+id/textClockDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:format12Hour="yyyy-MM-dd"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="20sp" />
-
-    <TextClock
-        android:id="@+id/textClockTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textClockDate"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:format12Hour="hh:mm:ss a"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/buttonLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textClockTime"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:background="@android:color/holo_purple"
-        android:text="Location"
-        android:textColor="@android:color/white" />
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-8318544790581778/5745250570" />
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:background="@android:color/darker_gray">
 
-</RelativeLayout>
+        <TextClock
+            android:id="@+id/textClockDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:format12Hour="yyyy-MM-dd"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20sp" />
+
+        <TextClock
+            android:id="@+id/textClockTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textClockDate"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:format12Hour="hh:mm:ss a"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/buttonLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textClockTime"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
+            android:background="@android:color/holo_purple"
+            android:text="Location"
+            android:textColor="@android:color/white" />
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="382dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-8318544790581778/5745250570" />
+
+    </RelativeLayout>
