--- a/MohammadAliModule10/src/main/res/layout/custom_toast.xml
+++ b/MohammadAliModule10/src/main/res/layout/custom_toast.xml
@@ -5,6 +5,7 @@
     android:background="@android:color/black"
     android:orientation="horizontal"
     android:padding="16dp">
+    <!-- MohammadAli Fouladi N01547173-->
 
     <TextView
         android:id="@+id/toast_text"
