--- a/MohammadAliModule10/src/main/res/layout/fragment_m4f.xml
+++ b/MohammadAliModule10/src/main/res/layout/fragment_m4f.xml
@@ -6,6 +6,7 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:background="@android:color/darker_gray">
+    <!-- MohammadAli Fouladi N01547173-->
 
     <TextClock
         android:id="@+id/textClockDate"
