--- a/MohammadAliModule10/src/main/res/layout/video_item.xml
+++ b/MohammadAliModule10/src/main/res/layout/video_item.xml
@@ -14,6 +14,7 @@
         android:paddingStart="16dp"
         android:text="@string/video_description"
         android:textSize="16sp" />
+    <!-- MohammadAli Fouladi N01547173-->
 
     <ImageView
         android:id="@+id/videoIcon"
